@@ -180,6 +180,49 @@ anton
         emil
 
 
+Regressions
+===========
+
+In version 0.3.1, a bug involving omissions in the plaintext output was found:
+If a subtree was omitted, siblings following its mount point were skipped.
+This is how it should work:
+
+>>> anton = make_dist("anton-1.egg", depends="""berta
+...                                             charlie""")
+>>> berta = make_dist("berta-2.egg", depends="""charlie
+...                                             emil""")
+>>> charlie = make_dist("charlie-1.4.egg", depends="dora")
+>>> dora = make_dist("dora-0.5.egg")
+>>> emil = make_dist("emil-1.egg")
+>>> ws = make_working_set(anton, berta, charlie, dora, emil)
+>>> graph = Graph(working_set=ws)
+>>> graph.from_specifications("anton")
+
+>>> print_graph(graph, pt_options())
+anton
+    berta
+        charlie ...
+        emil
+    charlie
+        dora
+
+>>> print_graph(graph, pt_options(once=True))
+anton
+    berta
+        emil
+        ...
+    charlie
+        dora
+
+>>> print_graph(graph, pt_options(terse=True))
+anton
+    berta
+        charlie
+        emil
+    charlie
+        dora
+
+
 .. Local Variables:
 .. mode: rst
 .. End:
